Replace update menu badge
Replace the current update menu badge with a different animated badge.

BUG=586325

Review URL: https://codereview.chromium.org/1694673002

Cr-Commit-Position: refs/heads/master@{#375619}

--- a/chrome/android/java/res/layout/location_bar.xml
+++ b/chrome/android/java/res/layout/location_bar.xml
@@ -64,18 +64,18 @@
 
             <org.chromium.chrome.browser.widget.TintedImageButton
                 android:id="@+id/document_menu_button"
-                style="@style/LocationBarButton"
-                android:layout_height="match_parent"
-                android:layout_width="match_parent"
+                style="@style/LocationBarMenuButton"
                 android:src="@drawable/btn_menu"
                 android:contentDescription="@string/accessibility_toolbar_btn_menu" />
 
             <ImageView
                 android:id="@+id/document_menu_badge"
-                style="@style/UpdateMenuBadge"
-                android:src="@drawable/badge_update"
-                android:layout_marginEnd="3.5dp"
-                android:contentDescription="@null" />
+                style="@style/LocationBarMenuButton"
+                android:src="@drawable/badge_update_dark"
+                android:scaleType="center"
+                android:contentDescription="@null"
+                android:importantForAccessibility="no"
+                android:visibility="invisible" />
 
         </FrameLayout>
 
