--- a/chrome/android/java/res/values-v17/styles.xml
+++ b/chrome/android/java/res/values-v17/styles.xml
@@ -435,24 +435,29 @@
     <style name="LocationBarButton">
         <item name="android:background">@null</item>
     </style>
+    <style name="LocationBarMenuButton" parent="LocationBarButton">
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_width">match_parent</item>
+    </style>
     <style name="ToolbarButton">
         <item name="android:background">?attr/selectableItemBackground</item>
         <item name="android:layout_width">48dp</item>
         <item name="android:layout_height">56dp</item>
         <item name="android:scaleType">center</item>
     </style>
+    <style name="ToolbarMenuButtonPhone" parent="ToolbarButton">
+        <item name="android:layout_gravity">top</item>
+        <item name="android:layout_width">42dp</item>
+        <item name="android:paddingEnd">4dp</item>
+        <item name="android:background">@null</item>
+    </style>
+    <style name="ToolbarMenuButtonTablet" parent="ToolbarButton">
+        <item name="android:layout_width">43dp</item>
+        <item name="android:paddingEnd">3.5dp</item>
+    </style>
     <style name="AppMenuItem">
         <item name="android:paddingStart">16dp</item>
         <item name="android:paddingEnd">16dp</item>
         <item name="android:background">?attr/listChoiceBackgroundIndicator</item>
-    </style>
-    <style name="UpdateMenuBadge">
-        <item name="android:layout_height">@dimen/menu_badge_size</item>
-        <item name="android:layout_width">@dimen/menu_badge_size</item>
-        <item name="android:layout_gravity">end|bottom</item>
-        <item name="android:layout_marginBottom">14dp</item>
-        <item name="android:focusable">false</item>
-        <item name="android:importantForAccessibility">no</item>
-        <item name="android:visibility">invisible</item>
     </style>
 </resources>
