--- a/chrome/android/java/res/layout-sw600dp/toolbar.xml
+++ b/chrome/android/java/res/layout-sw600dp/toolbar.xml
@@ -69,18 +69,17 @@
 
             <org.chromium.chrome.browser.widget.TintedImageButton
                 android:id="@+id/menu_button"
-                style="@style/ToolbarButton"
+                style="@style/ToolbarMenuButtonTablet"
                 android:src="@drawable/btn_menu"
-                android:contentDescription="@string/accessibility_toolbar_btn_menu"
-                android:layout_width="43dp"
-                android:paddingEnd="3.5dp" />
+                android:contentDescription="@string/accessibility_toolbar_btn_menu" />
 
             <ImageView
                 android:id="@+id/menu_badge"
-                style="@style/UpdateMenuBadge"
-                android:src="@drawable/badge_update"
-                android:layout_marginEnd="8.5dp"
-                android:contentDescription="@null" />
+                style="@style/ToolbarMenuButtonTablet"
+                android:src="@drawable/badge_update_dark"
+                android:contentDescription="@null"
+                android:importantForAccessibility="no"
+                android:visibility="invisible" />
 
         </FrameLayout>
     </LinearLayout>
