--- a/chrome/browser/resources/media_router/elements/route_details/route_details.css
+++ b/chrome/browser/resources/media_router/elements/route_details/route_details.css
@@ -27,7 +27,7 @@
 }
 
 #route-information {
-  -webkit-padding-end: 26px;
+  -webkit-padding-end: var(--dialog-padding-end);
   -webkit-padding-start: 44px;
   background-color: white;
   font-size: 1.2em;
@@ -39,4 +39,3 @@
 #start-casting-to-route-button {
   @apply(--layout-flex);
 }
-
