Add chrome://physical-web as a diagnostics endpoint
The diagnostics page checks whether prerequisites for the Physical Web
feature are met and reports this information back to the user.
If UrlManager has cached URL data, the cached data is also reported. If
there are URLs that have been found but cannot be included in the URLs
list, the URL will be reported along with the reason for its exclusion.

The chrome://physical-web endpoint is only accessible when the Physical
Web chrome flag is enabled (chrome://flags/#enable-physical-web)

BUG=577065

Review URL: https://codereview.chromium.org/1591143002

Cr-Commit-Position: refs/heads/master@{#375705}

--- a/chrome/android/java/res/values/colors.xml
+++ b/chrome/android/java/res/values/colors.xml
@@ -168,6 +168,11 @@
     <color name="physical_web_url_description_color">#646464</color>
     <color name="physical_web_logo_gray_tint">#ccc</color>
 
+    <!-- Physical Web diagnostics colors -->
+    <color name="physical_web_diags_success_color">#00933b</color>
+    <color name="physical_web_diags_failure_color">#f90101</color>
+
     <!-- Bottom bar colors -->
     <color name="bottom_bar_shadow_color">#1d000000</color>
+
 </resources>
