Settings People Revamp: Add Choose File icon.
Added Choose File icon to the ChromeOS Change Picture subpage.

This was pretty trivial actually, as the logic already existed in the
C++ handler, and just needed a hookup.

BUG=563721

Review URL: https://codereview.chromium.org/1700023004

Cr-Commit-Position: refs/heads/master@{#375957}

--- a/chrome/browser/resources/settings/people_page/change_picture.css
+++ b/chrome/browser/resources/settings/people_page/change_picture.css
@@ -8,22 +8,36 @@
   padding-top: 16px;
 }
 
-#availableIcons img {
+#availableIcons img,
+#availableIcons iron-icon {
   border-radius: 4px;
-  height: 64px;
   margin: 8px;
+}
+
+#availableIcons img {
+  height: 64px;
   padding: 2px;
+  vertical-align: top;
   width: 64px;
 }
 
-#availableIcons img.bordered-image {
+#availableIcons iron-icon {
   border: 1px solid var(--google-grey-500);
-  padding: 1px;
+  height: 32px;
+  padding: 17px;
+  width: 32px;
+}
+
+#availableIcons .iron-selected {
+  border: 2px solid var(--google-blue-500);
 }
 
 #availableIcons img.iron-selected {
-  border: 2px solid var(--google-blue-500);
   padding: 0;
+}
+
+#availableIcons iron-icon.iron-selected {
+  padding: 16px;
 }
 
 #previewPane {
