Settings People Revamp: Add Author credits to ChromeOS Change Picture.
Adds the missing author credit text as shown in the mocks here for the
ChromeOS Change Picture.

BUG=563721

Review URL: https://codereview.chromium.org/1699343002

Cr-Commit-Position: refs/heads/master@{#375986}

--- a/chrome/browser/resources/settings/people_page/change_picture.css
+++ b/chrome/browser/resources/settings/people_page/change_picture.css
@@ -40,6 +40,11 @@
   padding: 16px;
 }
 
+#authorCredit,
+#authorCredit a {
+  color: var(--paper-grey-500);
+}
+
 #previewPane {
   -webkit-margin-end: 10px;
   flex-shrink: 0;
