--- a/mojo/public/tools/bindings/generators/cpp_templates/interface_declaration.tmpl
+++ b/mojo/public/tools/bindings/generators/cpp_templates/interface_declaration.tmpl
@@ -45,6 +45,15 @@ class {{interface.name}} {
 
 {%- for method in interface.methods %}
 {%    if method.response_parameters != None %}
+{%-     if method.sync %}
+  virtual bool {{method.name}}({{interface_macros.declare_sync_method_params("", method)}}) {
+    // Sync method. This signature is used by the client side; the service side
+    // should implement the signature with callback below.
+    NOTREACHED();
+    return false;
+  }
+{%-     endif %}
+
   using {{method.name}}Callback = {{interface_macros.declare_callback(method)}};
 {%-   endif %}
   virtual void {{method.name}}({{interface_macros.declare_request_params("", method)}}) = 0;
