Gallery: add margin between sliders.
BUG=585066
TEST=manually tested as described in the issue.

Review URL: https://codereview.chromium.org/1706813004

Cr-Commit-Position: refs/heads/master@{#376108}

--- a/ui/file_manager/gallery/css/gallery.css
+++ b/ui/file_manager/gallery/css/gallery.css
@@ -878,6 +878,10 @@ button[disabled] {
   display: flex;
 }
 
+.edit-modal .range:not(:last-child) {
+  -webkit-margin-end: 16px;
+}
+
 .edit-modal .range > .icon {
   -webkit-margin-end: 8px;
   display: block;
