Add the "Never Saved" section to passwords.
BUG=546836

Review URL: https://codereview.chromium.org/1689333002

Cr-Commit-Position: refs/heads/master@{#376252}

--- a/chrome/browser/resources/settings/passwords_and_forms_page/passwords_section.css
+++ b/chrome/browser/resources/settings/passwords_and_forms_page/passwords_section.css
@@ -9,6 +9,10 @@ iron-list {
   padding-top: 16px;
 }
 
+paper-icon-button {
+  color: var(--paper-grey-500);
+}
+
 paper-input {
   --paper-input-container-disabled: {
     opacity: 1;
@@ -17,4 +21,8 @@ paper-input {
     opacity: 0;
   };
   width: 150px;
+}
+
+.list-frame {
+  margin-top: 3%;
 }
