MD Settings: Manage search engines 3/3, hooking up UI.
Specifically,
 - Migrating UI from chrome.searchEnginesPrivate API to use C++ handlers.
 - Implementing editing of existing search engine entries (and renamed
   add_search_engine_dialog to search_engine_dialog).
 - Hooking up validiation when editing/adding a search engine.
 - Some UI polish (show search engine icons when available, adjust column widths).
 - Adding lot of tests.

BUG=479359

Review URL: https://codereview.chromium.org/1666623006

Cr-Commit-Position: refs/heads/master@{#376362}

--- a/chrome/browser/resources/settings/search_engines_page/search_engine_entry.css
+++ b/chrome/browser/resources/settings/search_engines_page/search_engine_entry.css
@@ -4,7 +4,7 @@
 
 .name-column,
 .keyword-column {
-  flex: 2;
+  flex: 3;
 }
 
 .name-column {
@@ -12,7 +12,7 @@
 }
 
 .url-column {
-  flex: 5;
+  flex: 3.5;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -20,11 +20,13 @@
 
 .icon-container {
   flex: 1;
+  margin: auto;
   text-align: center;
 }
 
 .name {
   flex: 3;
+  margin: auto;
 }
 
 #container {
