--- a/chrome/browser/resources/settings/settings_dialog.css
+++ b/chrome/browser/resources/settings/settings_dialog.css
@@ -45,9 +45,12 @@ paper-dialog .body {
 
 paper-dialog .action-button {
   -webkit-margin-start: 10px;
+  font-weight: 500;
+}
+
+paper-dialog .action-button:not([disabled]) {
   background-color: rgb(66, 133, 244);
   color: white;
-  font-weight: 500;
 }
 
 paper-dialog .cancel-button {
