Remove close button from confirm dialog and alert dialog.
BUG=584592
TEST=For confirm dialog, manually tested as described in the issue.
     For alert dialog, none.

Review URL: https://codereview.chromium.org/1690503003

Cr-Commit-Position: refs/heads/master@{#376411}

--- a/ui/file_manager/file_manager/foreground/css/common.css
+++ b/ui/file_manager/file_manager/foreground/css/common.css
@@ -320,6 +320,16 @@ html[dir='rtl'] .cr-dialog-close {
   opacity: 1;
 }
 
+.files-alert-dialog .cr-dialog-close,
+.files-confirm-dialog .cr-dialog-close {
+  display: none;
+}
+
+.files-alert-dialog .cr-dialog-text,
+.files-confirm-dialog .cr-dialog-text {
+  font-size: 14px;
+}
+
 /* Minor tweak of vertical position for texts which need to be vertically
  * aligned with corresponding file-type icons. */
 .tree-row > .label,
