--- a/chrome/android/java/res/xml/clear_browsing_data_preferences.xml
+++ b/chrome/android/java/res/xml/clear_browsing_data_preferences.xml
@@ -7,6 +7,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:chrome="http://schemas.android.com/apk/res-auto">
 
+    <org.chromium.chrome.browser.preferences.SpinnerPreference
+        android:key="time_period_spinner"
+        android:persistent="false"
+        android:title="@string/clear_browsing_data_period_title" />
+
     <org.chromium.chrome.browser.preferences.ChromeBaseCheckBoxPreference
         android:key="clear_history_checkbox"
         android:persistent="false"
