Tweak the CBD dialog on Android according to mocks.
This CL contains a number of visual tweaks to make the CBD dialog
on Android match mocks.

1. "Cookies" come before "Cache" (in layout, but also in code for consistency)
2. A divider is put between the "Clear" button and the footer
3. Dividers are removed from between checkboxes.
4. Strings of checkboxes and the "Clear" button are updated.
5. Logged-in / logged-out footers are fixed (they were swapped).
6. Checkboxes now have fixed height.

Mocks for reference:
https://docs.google.com/presentation/d/1k4_lZEnXn2e-U_3BQwvdZvtge3Jgld3bNM-doDwKJkU/

BUG=569870

Review URL: https://codereview.chromium.org/1708373002

Cr-Commit-Position: refs/heads/master@{#376561}

--- a/chrome/android/java/res/values/dimens.xml
+++ b/chrome/android/java/res/values/dimens.xml
@@ -318,4 +318,7 @@
     <dimen name="account_chooser_dialog_item_margin">20dp</dimen>
     <dimen name="account_chooser_dialog_title_main_text_size">18sp</dimen>
     <dimen name="account_chooser_dialog_title_descriptive_text_size">16sp</dimen>
+
+    <!-- Clear browsing data preferences dimensions -->
+    <dimen name="clear_browsing_data_checkbox_height">56dp</dimen>
 </resources>
