--- a/chrome/android/java/res/xml/clear_browsing_data_preferences.xml
+++ b/chrome/android/java/res/xml/clear_browsing_data_preferences.xml
@@ -12,32 +12,32 @@
         android:persistent="false"
         android:title="@string/clear_browsing_data_period_title" />
 
-    <org.chromium.chrome.browser.preferences.ChromeBaseCheckBoxPreference
+    <org.chromium.chrome.browser.preferences.ClearBrowsingDataCheckBoxPreference
         android:key="clear_history_checkbox"
         android:persistent="false"
         android:title="@string/clear_history_title" />
 
-    <org.chromium.chrome.browser.preferences.ChromeBaseCheckBoxPreference
-        android:key="clear_cache_checkbox"
-        android:persistent="false"
-        android:title="@string/clear_cache_title" />
-
-    <org.chromium.chrome.browser.preferences.ChromeBaseCheckBoxPreference
+    <org.chromium.chrome.browser.preferences.ClearBrowsingDataCheckBoxPreference
         android:key="clear_cookies_checkbox"
         android:persistent="false"
         android:title="@string/clear_cookies_and_site_data_title" />
 
-    <org.chromium.chrome.browser.preferences.ChromeBaseCheckBoxPreference
+    <org.chromium.chrome.browser.preferences.ClearBrowsingDataCheckBoxPreference
+        android:key="clear_cache_checkbox"
+        android:persistent="false"
+        android:title="@string/clear_cache_title" />
+
+    <org.chromium.chrome.browser.preferences.ClearBrowsingDataCheckBoxPreference
         android:key="clear_passwords_checkbox"
         android:persistent="false"
         android:title="@string/clear_passwords_title" />
 
-    <org.chromium.chrome.browser.preferences.ChromeBaseCheckBoxPreference
+    <org.chromium.chrome.browser.preferences.ClearBrowsingDataCheckBoxPreference
         android:key="clear_form_data_checkbox"
         android:persistent="false"
         android:title="@string/clear_form_data_title" />
 
-    <org.chromium.chrome.browser.preferences.ChromeBaseCheckBoxPreference
+    <org.chromium.chrome.browser.preferences.ClearBrowsingDataCheckBoxPreference
         android:key="clear_bookmarks_checkbox"
         android:persistent="false"
         android:title="@string/clear_bookmarks_title" />
@@ -45,6 +45,8 @@
     <org.chromium.chrome.browser.preferences.ButtonPreference
         android:key="clear_button"
         android:title="@string/clear_data_delete" />
+
+    <Preference android:layout="@layout/divider_preference" />
 
     <org.chromium.chrome.browser.preferences.TextMessagePreference
         android:key="summary" />
