Add several missing dividers beneath on/off switches in Settings.
Each switch preference in settings should have a horizontal divider
beneath it. This adds missing dividers to four settings screens.

BUG=588302

Review URL: https://codereview.chromium.org/1713973004

Cr-Commit-Position: refs/heads/master@{#376577}

--- a/chrome/android/java/res/xml/physical_web_preferences.xml
+++ b/chrome/android/java/res/xml/physical_web_preferences.xml
@@ -10,7 +10,8 @@
     <org.chromium.chrome.browser.preferences.ChromeSwitchPreference
         android:key="physical_web_switch"
         android:summaryOn="@string/text_on"
-        android:summaryOff="@string/text_off" />
+        android:summaryOff="@string/text_off"
+        chrome:drawDivider="true" />
 
     <org.chromium.chrome.browser.preferences.TextMessagePreference
         android:title="@string/physical_web_pref_description" />
