Android Chromoting: Pull Credits page out to a separate Activity.
This makes the Credits page separate from the main Help screen, so that
it can interoperate more easily with the Google-internal version of the
Help system.

BUG=548929

Review URL: https://codereview.chromium.org/1672213003

Cr-Commit-Position: refs/heads/master@{#376595}

--- a/remoting/android/java/AndroidManifest.xml.jinja2
+++ b/remoting/android/java/AndroidManifest.xml.jinja2
@@ -61,5 +61,6 @@
                 android:configChanges="orientation|screenSize"
                 android:uiOptions="splitActionBarWhenNarrow">
         </activity>
+        <activity android:name="org.chromium.chromoting.help.CreditsActivity"/>
     </application>
 </manifest>
