Avoid checking Bluetooth state without Bluetooth permission
Previously the diagnostics page would test whether Bluetooth was enabled
without first checking whether Chrome has the Bluetooth permission. Without the
permission, accessing the diagnostics page causes a crash.

To prevent this, when the permission is not granted we will not
programmatically check whether Bluetooth is enabled. Instead, the diagnostics
page directs the user to verify the Bluetooth state manually.

BUG=587934

Review URL: https://codereview.chromium.org/1716803003

Cr-Commit-Position: refs/heads/master@{#376596}

--- a/chrome/android/java/res/values/colors.xml
+++ b/chrome/android/java/res/values/colors.xml
@@ -171,6 +171,7 @@
     <!-- Physical Web diagnostics colors -->
     <color name="physical_web_diags_success_color">#00933b</color>
     <color name="physical_web_diags_failure_color">#f90101</color>
+    <color name="physical_web_diags_indeterminate_color">#f2b50f</color>
 
     <!-- Bottom bar colors -->
     <color name="bottom_bar_shadow_color">#1d000000</color>
