Update account and sync management UX
These changes encompass all the UX changes to the accounts list screen, and the sync settings screen. This does not include signing in from the settings screen or switching sync accounts.

BUG=557784

Review URL: https://codereview.chromium.org/1660353002

Cr-Commit-Position: refs/heads/master@{#376729}

--- a/chrome/android/java/res/xml/sync_customization_preferences.xml
+++ b/chrome/android/java/res/xml/sync_customization_preferences.xml
@@ -7,8 +7,11 @@
 
     <org.chromium.chrome.browser.preferences.ChromeSwitchPreference
         android:key="sync_switch"
-        android:summaryOn="@string/text_on"
-        android:summaryOff="@string/text_off" />
+        android:title="@string/sign_in_sync"
+        android:summary="@string/sync_description" />
+
+    <org.chromium.chrome.browser.preferences.SyncedAccountPreference
+        android:key="synced_account" />
 
     <PreferenceCategory
         android:key="sync_data_types"
