--- a/chrome/android/java/res/values/values.xml
+++ b/chrome/android/java/res/values/values.xml
@@ -54,5 +54,6 @@
     <string name="help_context_sad_tab">mobile_awsnap</string>
     <string name="help_context_physical_web">physical_web</string>
     <string name="help_context_clear_browsing_data">clear_browsing_data</string>
+    <string name="help_context_change_sync_passphrase">change_sync_passphrase</string>
 
 </resources>
