--- a/mojo/public/tools/bindings/generators/cpp_templates/interface_declaration.tmpl
+++ b/mojo/public/tools/bindings/generators/cpp_templates/interface_declaration.tmpl
@@ -12,6 +12,7 @@ class {{interface.name}} {
   static const char Name_[];
   static const uint32_t Version_ = {{interface.version}};
   static const bool PassesAssociatedKinds_ = {% if interface|passes_associated_kinds %}true{% else %}false{% endif %};
+  static const bool HasSyncMethods_ = {% if interface|has_sync_methods %}true{% else %}false{% endif %};
 
   using GenericInterface = {{interface|get_qualified_name_for_kind}};
 
