Mojo bindings: Add string support to StructTraits
This CL enables string-typed fields in structs to be
serialized and deserialized via StructTraits using
base::StringPiece as an intermediate interface between
the native type and the message buffer.

BUG=577686
R=yzshen@chromium.org

Review URL: https://codereview.chromium.org/1719183002

Cr-Commit-Position: refs/heads/master@{#376952}

--- a/mojo/public/tools/bindings/generators/cpp_templates/module.h.tmpl
+++ b/mojo/public/tools/bindings/generators/cpp_templates/module.h.tmpl
@@ -18,6 +18,7 @@
 #include <stdint.h>
 #include <ostream>
 
+#include "base/strings/string_piece.h"
 #include "mojo/public/cpp/bindings/array.h"
 #include "mojo/public/cpp/bindings/associated_interface_ptr.h"
 #include "mojo/public/cpp/bindings/associated_interface_ptr_info.h"
