--- a/chrome/android/java/res/xml/privacy_preferences.xml
+++ b/chrome/android/java/res/xml/privacy_preferences.xml
@@ -70,5 +70,6 @@
     <Preference
         android:key="clear_browsing_data"
         android:title="@string/clear_browsing_data_title"
+        android:summary="@string/clear_browsing_data_summary"
         android:fragment="org.chromium.chrome.browser.preferences.privacy.ClearBrowsingDataPreferences" />
 </PreferenceScreen>
