--- a/blimp/client/app/android/java/res/layout/blimp_main.xml
+++ b/blimp/client/app/android/java/res/layout/blimp_main.xml
@@ -4,7 +4,7 @@
      found in the LICENSE file. -->
 
 <merge xmlns:android="http://schemas.android.com/apk/res/android">
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -13,6 +13,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="56dp"
+            android:layout_alignParentTop="true"
             android:paddingStart="5dp"
             android:orientation="horizontal"
             android:gravity="center"
@@ -41,6 +42,19 @@
         <org.chromium.blimp.BlimpView
             android:id="@+id/renderer"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </LinearLayout>
+            android:layout_height="match_parent"
+            android:layout_below="@+id/toolbar"/>
+        <org.chromium.blimp.input.TextInputFeature
+                android:id="@+id/editText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/web_input_background"
+                android:layout_alignParentBottom="true"
+                android:layout_marginTop="45dp"
+                android:padding="10dp"
+                android:paddingTop="16dp"
+                android:inputType="text|textWebEditText"
+                android:visibility="gone"/>
+
+    </RelativeLayout>
 </merge>
